--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<script>
+  const url = new URL(location.href);
+  const value = url.searchParams.get(`value`);
+  document.body.innerHTML = document.body.innerHTML.replace(/\$1/g, value);
+</script>
 
     <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js" defer></script>
 
