--- a/index.html
+++ b/index.html
@@ -1054,16 +1054,60 @@ async function ensureFormatSpecEntry() {
   const entry = {
     name,
     enabled: true,
-    position: { order: ORDER },               // 顺序 1213（ORDER 上面已经是 1213）
+    position: { type: 'at_depth', role: 'system', depth: 0, order: 1213 },              
     prevent_recursion: true,
-    exclude_recursion: true,
+    exclude_recursion: false,
     strategy: {
       type: 'selective',
       keys: ['<RMPhone>', 'QQ', 'qq', 'DM', 'GROUP'],
-      keys_secondary: { logic: 'and_any', keys: [] },
-      scan_depth: 0                           // 你要的 depth=0（这里对应 scan_depth）
+      keys_secondary: { logic: 'and_any', keys: [] }, 
     },
-    content: 'RMPhone格式规范'
+    content: `当<inputs>标签中含"[{{消息格式}}|{{消息发出对象}}|{{消息内容等}}]"或"查看xxx发来的消息"等线上聊天格式时，AI必须强制使用该格式进行回复。严格禁止与其他回复格式同时使用：
+
+<RMPhone>
+[QQ|{{登录用户}}]
+[DM|{{私聊对象}}]
+<!-- 此处放置私聊内角色的消息 -->
+[/DM|{{私聊对象}}]
+[GROUP|{{群聊名}}]
+<!-- 此处放置群聊内角色的消息 -->
+[/GROUP|{{群聊名}}]
+[/QQ|{{登录用户}}]
+</RMPhone>
+
+格式介绍：
+- [QQ|{{登录用户}}]表示当前手机QQ登录的用户。
+- [DM|{{私聊对象}}]表示私聊聊天块，{{私聊对象}}是{{登录用户}}的单人聊天对象。
+- [GROUP|{{群聊名}}]表示群聊聊天块，{{群聊名}}即{{登录用户}}所在的群聊名。
+消息格式介绍：
+- 每一条角色消息都为[{{消息格式}}|{{消息发出方}}|{{消息内容等}}]
+- 以下为具体的可发送消息类型：
+  - 文字：[txt|{{发出方}}|{{文字消息内容}}]
+  - 表情包：[bqb|{{发出方}}|{{表情包描述}}|{{表情包url}}]（表情包仅可使用<bqb>中已有内容）
+  - 语音：[voice|{{发出方}}|{{语音时长}}|{{语音内容}}]
+  - 多媒体：[dmt|{{发出方}}|{{多媒体（图片、视频等）的文字描述}}]
+  - 文件：[file|{{发出方}}|{{文件名}}|{{文件大小}}]
+  - 接收文件：[file.rcv|{{发出方}}|{{文件名}}]（此消息仅收到文件时使用）
+  - 时间戳：[time|时间|{{当前时间（HH:MM）}}]（时间戳不需要规定发送方）
+  - 定位：[loc|{{发出方}}|{{位置信息}}]
+  - 转账：[xfr|{{发出方}}|{{接收方}}|{{转账金额}}]
+  - 接受转账：[xfr.rcv|{{发出方}}|{{转账方}}|{{转账金额}}]
+  - 拒收转账：[xfr.rfd|{{发出方}}|{{转账方}}|{{转账金额}}]
+  - 拍一拍：[nudge|{{发出方}}|{{拍一拍对象}}]
+  - 个新签名：[sig|{{发出方}}|{{个性签名内容，不超过20字}}]
+  - 邀请进群：[invite|{{发出方}}|{{被邀请人}}]（仅在群聊使用）
+  - 拉黑：[block|{{发出方}}|{{被拉黑对象}}]（仅在私聊使用）
+  - 取消拉黑：[unblock|{{发出方}}|{{被取消拉黑对象}}]（仅在私聊使用）
+格式规范：
+- **绝对禁止遗漏任何闭合标签**。
+- 每次更新回复时，都必须在每个消息块加入一个时间戳。
+- 每条消息格式都由一个[{{消息格式}}|{{消息发出对象}}|{{消息内容等}}]发送。
+- 严禁扮演{{user}}: 绝对禁止生成任何发送方为{{user}}的消息。
+- **回复<inputs>中每一个消息块的内容**（允许回复多个聊天块）。
+- 消息数量: 根据对话情景，每个聊天块回复3到7条消息。避免每次都只回一条或固定数量，要模拟真实聊天的打字和发送习惯。
+- 内容多样性: 不要总是以固定的方式（如表情、语气词）开头。让对话内容自然、生动，既要符合网络聊天习惯，又要符合角色性格。
+- 可以同时在多个窗口中回复消息。如果当前场景暗示了可能有多个对话正在进行，你的<RMPhone>标签内就应该包含多个对应的聊天块。甚至可以通过创建一个新的[QQ|{{login用户}}]/[DM]/[GROUP]来主动开启一个新聊天块。
+- 聊天块之间的对话是互相不可见的，注意线上私聊群聊的私密性。`
   };
   await createWorldbookEntries(wb, [entry], { replace: false });
   return { created: true, name };
