--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         }
       }
       body {
-        background: black;
+        background: transparent;
         margin: 0;
         display: flex;
         justify-content: center;
