--- a/index.html
+++ b/index.html
@@ -1107,6 +1107,7 @@ async function ensureFormatSpecEntry() {
 - 消息数量: 根据对话情景，每个聊天块回复3到7条消息。避免每次都只回一条或固定数量，要模拟真实聊天的打字和发送习惯。
 - 内容多样性: 不要总是以固定的方式（如表情、语气词）开头。让对话内容自然、生动，既要符合网络聊天习惯，又要符合角色性格。
 - 可以同时在多个窗口中回复消息。如果当前场景暗示了可能有多个对话正在进行，你的<RMPhone>标签内就应该包含多个对应的聊天块。甚至可以通过创建一个新的[QQ|{{login用户}}]/[DM]/[GROUP]来主动开启一个新聊天块。
+- 当角色被拉黑时，建议创建被拉黑角色的QQ登录发送消息。
 - 聊天块之间的对话是互相不可见的，注意线上私聊群聊的私密性。`
   };
   await createWorldbookEntries(wb, [entry], { replace: false });
